<resources>
    <string name="app_name">记账小助手</string>
    <string name="drawer_item_home">首页</string>
    <string name="drawer_item_settings">设置</string>
    <string name="drawer_item_statistics">查看月统计</string>
    <string name="drawer_item_statistics_year">查看年统计</string>
    <string name="drawer_item_section_header">其他</string>
    <string name="drawer_item_exit">退出应用</string>
    <string name="edit_record">编辑账单</string>
    <string name="title_activity_login">LoginActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_account_center">AccountCenterActivity</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_0">0</string>
    <string name="text_spot">.</string>
    <string name="todo">TODO</string>
    <string name="_0_00">0.00</string>
    <string name="_9">9</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="text_book">Book</string>
</resources>
