<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.AddRecordActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <include layout="@layout/layout_toolbar" />

        <TextView
            android:id="@+id/toolbar_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/material_drawer_vertical_padding"
            android:layout_marginRight="@dimen/material_drawer_vertical_padding"
            android:background="@drawable/ripple_bg"
            android:gravity="center"
            android:padding="8dp"
            android:textColor="@android:color/white"
            tools:text="2019/5/19" />

        <!--        <TextView-->
        <!--            android:id="@+id/toolbar_time"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="match_parent"-->
        <!--            android:layout_alignParentEnd="true"-->
        <!--            android:layout_alignParentRight="true"-->
        <!--            android:layout_marginEnd="@dimen/material_drawer_vertical_padding"-->
        <!--            android:layout_marginRight="@dimen/material_drawer_vertical_padding"-->
        <!--            android:background="?android:selectableItemBackground"-->
        <!--            android:gravity="center"-->
        <!--            android:textColor="@android:color/white"-->
        <!--            tools:text="2019/5/19" />-->
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_addView_amount"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/keyboard_layout"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:baselineAligned="false">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="6">

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/white"
                    tools:ignore="UselessParent">

                    <TableRow android:layout_weight="1">

                        <Button
                            android:id="@+id/keyboard_seven"
                            style="?android:attr/borderlessButtonStyle"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="?android:selectableItemBackground"
                            android:text="@string/_7" />

                        <Button
                            android:id="@+id/keyboard_eight"
                            style="?android:attr/borderlessButtonStyle"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="?android:selectableItemBackground"
                            android:text="@string/_8" />

                        <Button
                            android:id="@+id/keyboard_nine"
                            style="?android:attr/borderlessButtonStyle"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="?android:selectableItemBackground"
                            android:text="@string/_9" />
                    </TableRow>

                    <View
                        android:layout_width="wrap_content"
                        android:layout_height="0.5dp"
                        android:background="@color/material_drawer_dark_background" />

                    <TableRow android:layout_weight="1">

                        <Button
                            android:id="@+id/keyboard_four"
                            style="?android:attr/borderlessButtonStyle"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="?android:selectableItemBackground"
                            android:text="@string/_4" />

                        <Button
                            android:id="@+id/keyboard_five"
                            style="?android:attr/borderlessButtonStyle"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"

                            android:layout_weight="1"
                            android:background="?android:selectableItemBackground"
                            android:text="@string/_5" />

                        <Button
                            android:id="@+id/keyboard_six"
                            style="?android:attr/borderlessButtonStyle"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="?android:selectableItemBackground"
                            android:text="@string/_6" />
                    </TableRow>

                    <View
                        android:layout_width="wrap_content"
                        android:layout_height="0.5dp"
                        android:background="@color/material_drawer_dark_background" />

                    <TableRow android:layout_weight="1">

                        <Button
                            android:id="@+id/keyboard_one"
                            style="?android:attr/borderlessButtonStyle"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="?android:selectableItemBackground"
                            android:text="@string/_1" />

                        <Button
                            android:id="@+id/keyboard_two"
                            style="?android:attr/borderlessButtonStyle"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="?android:selectableItemBackground"
                            android:text="@string/_2" />

                        <Button
                            android:id="@+id/keyboard_three"
                            style="?android:attr/borderlessButtonStyle"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="?android:selectableItemBackground"
                            android:text="@string/_3" />
                    </TableRow>

                    <View
                        android:layout_width="wrap_content"
                        android:layout_height="0.5dp"
                        android:background="@color/material_drawer_dark_background" />

                    <TableRow android:layout_weight="1">

                        <Button
                            style="?android:attr/borderlessButtonStyle"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="?android:selectableItemBackground"
                            android:text="" />

                        <Button
                            android:id="@+id/keyboard_zero"
                            style="?android:attr/borderlessButtonStyle"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="?android:selectableItemBackground"
                            android:text="@string/_0" />

                        <Button
                            android:id="@+id/keyboard_dot"
                            style="?android:attr/borderlessButtonStyle"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="?android:selectableItemBackground"
                            android:text="@string/text_spot" />
                    </TableRow>

                </TableLayout>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/white"
                    android:orientation="vertical"
                    tools:ignore="UselessParent">

                    <ImageButton
                        android:id="@+id/keyboard_type"
                        style="?android:attr/borderlessButtonStyle"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:background="?android:selectableItemBackground"
                        android:contentDescription="@string/todo"
                        android:src="@drawable/ic_cover_type" />

                    <ImageButton
                        android:id="@+id/keyboard_backspace"
                        style="?android:attr/borderlessButtonStyle"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:background="?android:selectableItemBackground"
                        android:contentDescription="@string/todo"
                        android:src="@drawable/ic_backspace" />

                    <ImageButton
                        android:id="@+id/keyboard_done"
                        style="?android:attr/borderlessButtonStyle"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:background="?android:selectableItemBackground"
                        android:contentDescription="@string/todo"
                        android:src="@drawable/ic_done" />

                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/keyboard_layout"
            android:background="@color/colorPrimary">

            <TextView
                android:id="@+id/textView_addView_amount"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:gravity="center"
                android:text="@string/_0_00"
                android:textColor="@android:color/white"
                android:textSize="60sp" />

            <EditText
                android:id="@+id/edit_text_mark"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/textView_addView_amount"
                android:layout_margin="10dp"
                android:background="@drawable/bg_edit_text"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="text"
                android:maxLines="1"
                android:padding="10dp"
                android:textColor="@android:color/white"
                android:textSize="26sp"
                tools:ignore="LabelFor"
                tools:text="@string/text_book" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/edit_text_mark"
                android:layout_margin="10dp" />
        </RelativeLayout>
    </RelativeLayout>
</LinearLayout>